# haveabreak

./: .gitignore  README.md  convert-dicts.js  implementation_plan.md  metadata.json  middleware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-lock.yaml.2627512395  release-notes.json  tauri-router.js  tsconfig.json  tsconfig.tsbuildinfo
.github/workflows/: tauri-build.yml
app/: globals.css  manifest.ts  sw.ts
app/[lang]/: layout.tsx  page-client.tsx  page.tsx
app/[lang]/card/: CardLayoutClient.tsx  CardPageClient.tsx  layout.tsx
app/[lang]/frame/: FrameLayoutClient.tsx  layout.tsx  page.tsx
app/[lang]/timer/: layout.tsx  page-client.tsx
app/api/frame-icon/: route.tsx
app/api/frame-manifest/: route.ts
app/api/manifest/: route.ts
app/serwist/[path]/: route.ts
apps/card/: index.html  package.json  presets.json  services.ts  storage.ts  store.ts  types.ts
apps/card/components/: AddBookModal.tsx  AddQuoteModal.tsx  BookDetail.tsx  QuoteCard.tsx  (+9 more)
apps/card/src-tauri/: Cargo.toml  tauri.conf.json
apps/card/src-tauri/capabilities/: default.json
apps/card/src-tauri/icons/: icon.icns
apps/card/src-tauri/locales/: en-US.wxl  zh-CN.wxl
apps/card/src-tauri/src/: lib.rs  main.rs
apps/frame/: FrameApp.tsx  README.md  package.json  presets.json  storage.ts  store.ts  types.ts
apps/frame/src-tauri/: Cargo.toml  tauri.conf.json
apps/frame/src-tauri/capabilities/: default.json
apps/frame/src-tauri/icons/: icon.icns
apps/frame/src-tauri/locales/: en-US.wxl  zh-CN.wxl
apps/frame/src-tauri/src/: lib.rs  main.rs
apps/maoji/: epdSpecs.ts  index.html  nfcService.ts  package.json  storage.ts  store.ts  types.ts
apps/maoji/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/maoji/src-tauri/capabilities/: default.json
apps/maoji/src-tauri/permissions/: nfc.toml
apps/maoji/src-tauri/src/: lib.rs  main.rs
apps/timer/: package.json
apps/timer/src-tauri/: Cargo.toml  tauri.conf.json
apps/timer/src-tauri/capabilities/: default.json
apps/timer/src-tauri/icons/: icon.icns
apps/timer/src-tauri/locales/: en-US.wxl  zh-CN.wxl
apps/timer/src-tauri/src/: lib.rs  main.rs
apps/web/: middleware.ts  next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
components/: FinishedDisplay.tsx  InstallPrompt.tsx  InterruptedDisplay.tsx  LandingSection.tsx  LanguageBanner.tsx  LanguageSwitcher.tsx  LayoutContent.tsx  Navbar.tsx  NeumorphicBottomNav.tsx  ServiceWorkerUpdate.tsx  Settings.tsx  TimeSelector.tsx  TimerDisplay.tsx
components/ui/: button.tsx  dialog.tsx  input.tsx  sonner.tsx  tabs.tsx
context/: NavbarContext.tsx
dictionaries/: de.ts  en.ts  es.ts  fr.ts  index.ts  it.ts  ja.ts  ko.ts  pt.ts  ru.ts  zh.ts
hooks/: useSwipeNavigation.ts
i18n/: request.ts  routing.ts
messages/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  pt.json  ru.json  zh.json
public/: ~offline
scripts/: tauri-index-template.html
tauri-plugin-nfc/: Cargo.toml
tauri-plugin-nfc/android/: build.gradle.kts
tauri-plugin-nfc/android/src/main/java/online/white_noise/nfc/: NfcPlugin.kt
tauri-plugin-nfc/permissions/: default.toml
tauri-plugin-nfc/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
(+189 files in other folders)
