[package]
name = "haveabreak-frame"
version = "0.1.0"
edition = "2021"

[lib]
name = "haveabreak_frame_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.11.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys-locale = "0.3"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }