[package]
name = "maoji"
version = "0.1.0"
edition = "2021"

[lib]
name = "haveabreak_maoji_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.11.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-nfc = { path = "../../../tauri-plugin-nfc" }

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }
