[package]
name = "haveabreak-timer"
version = "0.1.0"
edition = "2021"

[lib]
name = "haveabreak_timer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.11.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }
